Fix text overflow in social buttons

--- a/css/index.styl
+++ b/css/index.styl
@@ -451,15 +451,19 @@ breakpoint(point, value = 0)
         -webkit-box-sizing border-box
         box-sizing border-box
         display block
+        overflow hidden
         width 100%
         padding-left 54px
+        padding-right 15px
         line-height 40px
         text-align left
         text-transform uppercase
+        text-overflow ellipsis
         font-size 10px
         font-weight 600
         letter-spacing .7px
         color #fff
+        white-space nowrap
         transition background 0.3s
         -webkit-transition background 0.3s
 
